# 8-bit-computer-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/actions/download-sdl2/: action.yaml
.github/actions/download-sdl2-ttf/: action.yaml
.github/workflows/: cmake.yml
cmake/sdl2/: FindSDL2.cmake
programs/: add_two_numbers.asm  all_instructions.asm  count_0_255.asm  count_0_255_stop.asm  count_255_0_stop.asm  fibonacci.asm  increase_by_three.asm  invalid_data_test.asm  invalid_instruction_test.asm  invalid_origin_test.asm  memory_test.asm  multiply_two_numbers.asm  nop_test.asm  subtract_two_numbers.asm  too_many_instructions_test.asm
programs/test/: invalid_operand_test.asm  missing_operand_test.asm
src/: ArithmeticLogicUnit.cpp  ArithmeticLogicUnit.h  Assembler.cpp  Assembler.h  Bus.cpp  Bus.h  CMakeLists.txt  Clock.cpp  Clock.h  ClockListener.cpp  Emulator.cpp  Emulator.h  FlagsRegister.cpp  FlagsRegister.h  GenericRegister.cpp  GenericRegister.h  InstructionDecoder.cpp  InstructionDecoder.h  InstructionRegister.cpp  InstructionRegister.h  Instructions.cpp  Instructions.h  MemoryAddressRegister.cpp  MemoryAddressRegister.h  Microcode.cpp  Microcode.h  OutputRegister.cpp  OutputRegister.h  ProgramCounter.cpp  ProgramCounter.h  RandomAccessMemory.cpp  RandomAccessMemory.h  Register.cpp  Register.h  RegisterListener.cpp  RegisterListener.h  StepCounter.cpp  StepCounter.h  StepListener.cpp  StepListener.h  (+3 more)
src/core/: ArithmeticLogicUnit.cpp  ArithmeticLogicUnit.h  ArithmeticLogicUnitObserver.h  Assembler.cpp  Assembler.h  Bus.cpp  Bus.h  CMakeLists.txt  Clock.cpp  Clock.h  ClockListener.cpp  ClockListener.h  ClockObserver.h  Disassembler.cpp  Disassembler.h  Emulator.cpp  Emulator.h  FlagsRegister.cpp  FlagsRegister.h  FlagsRegisterObserver.h  GenericRegister.cpp  GenericRegister.h  InstructionDecoder.cpp  InstructionDecoder.h  InstructionDecoderObserver.h  InstructionRegister.cpp  InstructionRegister.h  Instructions.cpp  Instructions.h  MemoryAddressRegister.cpp  MemoryAddressRegister.h  OutputRegister.cpp  OutputRegister.h  ProgramCounter.cpp  ProgramCounter.h  RandomAccessMemory.cpp  RandomAccessMemory.h  RegisterListener.h  StepCounter.cpp  StepCounter.h  (+6 more)
src/ui/: ArithmeticLogicUnitModel.cpp  ArithmeticLogicUnitModel.h  CMakeLists.txt  ClockModel.cpp  ClockModel.h  FlagsRegisterModel.cpp  FlagsRegisterModel.h  InstructionDecoderModel.cpp  InstructionDecoderModel.h  InstructionModel.cpp  InstructionModel.h  Keyboard.cpp  Keyboard.h  RandomAccessMemoryModel.cpp  RandomAccessMemoryModel.h  UserInterface.cpp  UserInterface.h  ValueModel.cpp  ValueModel.h  Window.cpp  Window.h
test/: ArithmeticLogicUnitTest.cpp  AssemblerTest.cpp  BusTest.cpp  CMakeLists.txt  EmulatorIntegrationTest.cpp  FlagsRegisterTest.cpp  ProgramCounterTest.cpp  StepCounterTest.cpp  UtilsTest.cpp  test_main.cpp
test/core/: ArithmeticLogicUnitTest.cpp  AssemblerTest.cpp  BusTest.cpp  ClockTest.cpp  DisassemblerTest.cpp  EmulatorIntegrationStepTest.cpp  EmulatorIntegrationTest.cpp  FlagsRegisterTest.cpp  GenericRegisterTest.cpp  InstructionDecoderTest.cpp  InstructionRegisterTest.cpp  MemoryAddressRegisterTest.cpp  OutputRegisterTest.cpp  ProgramCounterTest.cpp  RandomAccessMemoryTest.cpp  StepCounterTest.cpp  TimeSourceTest.cpp  UtilsTest.cpp
test/include/: fakeit.hpp
